tests: fix duplicates on source install

--- a/tests/etc/1367.cfg
+++ b/tests/etc/1367.cfg
@@ -19,7 +19,7 @@ define contact{
         }
 
 define host{
-	name                           		generic-host-1367
+	name                           		test-generic-host-1367
 	check_interval                 		1
 	check_period                   		testconfig-24x7
 	event_handler_enabled          		1
@@ -38,7 +38,7 @@ define host{
 }
 
 define service{
-	name                           		generic-service-1367
+	name                           		test-generic-service-1367
 	active_checks_enabled          		1
 	check_freshness                		0
 	check_interval                 		1
@@ -67,7 +67,7 @@ define service{
 # hosts
 
 define host{
-	use                            		generic-host-1367
+	use                            		test-generic-host-1367
 	host_name                      		1367_host_001
 	address                        		127.0.0.1
 	alias                          		1367_up_001
@@ -88,7 +88,7 @@ define host{
 define service{
 	service_description            		1367_ok_01
 	host_name                      		1367_host_001
-	use                            		generic-service-1367
+	use                            		test-generic-service-1367
 	check_command                  		testconfig-check_service!ok
 	# stalk it ok, warning, unknown, critical
 	stalking_options		 	o,w,u,c
@@ -102,7 +102,7 @@ define service{
 define service{
 	service_description            		1367_ok_02
 	host_name                      		1367_host_001
-	use                            		generic-service-1367
+	use                            		test-generic-service-1367
 	check_command                  		testconfig-check_service!ok
 	# stalk it ok, warning, unknown, critical
 	stalking_options               		o,w,u,c
