--- a/tests/etc/1502.cfg
+++ b/tests/etc/1502.cfg
@@ -13,7 +13,7 @@ define timeperiod{
 
 }
 define host{
-	host_name 			generic-host_1502
+	host_name 			test-generic-host_1502
 	register 			0
 	alias 				Generic Host Definition
 	check_command 			true
@@ -22,7 +22,7 @@ define host{
 	contacts 			admin_1502
 	notification_interval 		10
 	notification_period 		testconfig-24x7_1502
-	name 				generic-host_1502
+	name 				test-generic-host_1502
 }
 define contact{
 	contact_name 			admin_1502
@@ -36,8 +36,8 @@ define contact{
 	service_notification_commands 	true
 }
 define service{
-	service_description 		generic-service_1502
-	name 				generic-service_1502
+	service_description 		test-generic-service_1502
+	name 				test-generic-service_1502
 	register 			0
 	is_volatile 			0
 	max_check_attempts 		1
@@ -60,7 +60,7 @@ define service{
 define host{
 	host_name 			localhost_1502
 	address 			127.0.0.1
-	use 				generic-host_1502
+	use 				test-generic-host_1502
 }
 define hostgroup{
 	hostgroup_name 			a
@@ -75,7 +75,7 @@ define service{
 	hostgroup_name 			a
 	service_description 		SSH Service Check
 	check_command 			true
-	use 				generic-service_1502
+	use 				test-generic-service_1502
 }
 define command{
 	command_line 			/bin/true
