--- a/tests/etc/1782.cfg
+++ b/tests/etc/1782.cfg
@@ -13,7 +13,7 @@ define command {
 
 define host{
         name                            1782linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
@@ -42,7 +42,7 @@ define command {
 
 
 define service{
-	use                             generic-service
+	use                             test-generic-service
 	check_interval                  5
 	retry_interval                  1
 	max_check_attempts              3
