--- a/tests/etc/2534.cfg
+++ b/tests/etc/2534.cfg
@@ -54,7 +54,7 @@ define service {
         service_description             2534service
         host_name                       2534localhost
         check_command                   2534test2
-        use                             generic-service
+        use                             test-generic-service
 	_edb_filter: {programInclusion: ['someProgram'] }
 }
 
