--- a/tests/etc/2701.cfg
+++ b/tests/etc/2701.cfg
@@ -24,7 +24,7 @@ define host{
         check_command                   testconfig-check-host-alive ; Default command to check Linux hosts
         notification_period             testconfig-workhours       ; Linux testconfig-group-admin hate to be woken up, so we only notify during the day
                                                         ; Note that the notification_period variable is being overridden from
-                                                        ; the value that is inherited from the generic-host template!
+                                                        ; the value that is inherited from the test-generic-host template!
         notification_interval           120             ; Resend notifications every 2 hours
         notification_options            d,u,r           ; Only send notifications for specific host states
         contact_groups                  testconfig-group-admin          ; Notifications get sent to the testconfig-group-admin by default
@@ -48,7 +48,7 @@ define host{
         check_command                   testconfig-check-host-alive ; Default command to check Linux hosts
         notification_period             testconfig-workhours       ; Linux testconfig-group-admin hate to be woken up, so we only notify during the day
                                                         ; Note that the notification_period variable is being overridden from
-                                                        ; the value that is inherited from the generic-host template!
+                                                        ; the value that is inherited from the test-generic-host template!
         notification_interval           120             ; Resend notifications every 2 hours
         notification_options            d,u,r           ; Only send notifications for specific host states
         contact_groups                  testconfig-group-admin          ; Notifications get sent to the testconfig-group-admin by default
@@ -72,7 +72,7 @@ define host{
         check_command                   testconfig-check-host-alive ; Default command to check Linux hosts
         notification_period             testconfig-workhours       ; Linux testconfig-group-admin hate to be woken up, so we only notify during the day
                                                         ; Note that the notification_period variable is being overridden from
-                                                        ; the value that is inherited from the generic-host template!
+                                                        ; the value that is inherited from the test-generic-host template!
         notification_interval           120             ; Resend notifications every 2 hours
         notification_options            d,u,r           ; Only send notifications for specific host states
         contact_groups                  testconfig-group-admin          ; Notifications get sent to the testconfig-group-admin by default
