--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -293,7 +293,7 @@ define service {
         name				2743template01
         host_name                       2743localhost1
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 	register			0
         event_handler                   2743_eventhandler01
 }
@@ -310,7 +310,7 @@ define service {
         name                            2743template02
         host_name                       2743localhost1
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 	retry_interval			20
         register                        0
 }
@@ -320,7 +320,7 @@ define service {
         host_name                       2743localhost2
 	check_interval			30
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
         register                        0
 }
 
@@ -338,21 +338,21 @@ define service {
         service_description             2743servicewithhostgroup01
 	hostgroup_name			2743hostgroupwithservices
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743servicewithhostgroup02
         hostgroup_name                  2743hostgroupwithservices
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743servicewithhostgroups03
         hostgroup_name                  2743hostgroupwithservicesmore,2743hostgroupwithservicesevenmore
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define host {
@@ -395,42 +395,42 @@ define service {
         service_description             2743service1
         host_name                       2743localhost1,2743localhost2
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743service2
         host_name                       2743localhost1,2743localhost2
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743service3
         host_name                       2743localhost1,2743localhost2
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743service4
         host_name                       2743localhost1,2743localhost2
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743service5
         host_name                       2743localhost1,2743localhost2
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743service6
         host_name                       2743localhost1,2743localhost2
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 
@@ -538,21 +538,21 @@ define service {
         service_description             2743dep_svc01
         host_name                       2743dep_hostsvc01,2743dep_hostsvc05,2743dep_hostsvc04,2743dep_hostsvc03
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743dep_svc02
         host_name                       2743dep_hostsvc01,2743dep_hostsvc02
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             2743dep_svc03
         host_name                       2743dep_hostsvc03
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 # with host_name and service_description
@@ -586,7 +586,7 @@ define service {
         name                            2743servicetemplate_sg01
         servicegroups                   2743sg_many
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
         register                        0
 }
 
@@ -633,7 +633,7 @@ define service {
         service_description             2743serviceforallhosts
         host_name                  	*
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
         servicegroups                   2743sg_allservices
 }
 
@@ -657,7 +657,7 @@ define service {
         service_description             2743servicewithexcludes
         host_name                       2743localhost1,!2743localhost2,2743localhost3
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 ##############################################
@@ -667,7 +667,7 @@ define service {
         name             		2743servicetemplatecontacts
         host_name                       2743localhost1
         check_command                   2743test2
-        use                             generic-service
+        use                             test-generic-service
 	register			0
 	contacts			2743testconfig-admin
 }
