--- a/tests/etc/2913.cfg
+++ b/tests/etc/2913.cfg
@@ -66,6 +66,6 @@ define service {
         service_description             2913service
         host_name                       2913localhost
         check_command                   2913macrotest2
-        use                             generic-service
+        use                             test-generic-service
 }
 
