--- a/tests/etc/3088.cfg
+++ b/tests/etc/3088.cfg
@@ -159,14 +159,14 @@ define service {
         service_description             3088service1
         host_name                       3088localhost1,3088localhost2
         check_command                   3088test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 define service {
         service_description             3088service2
         host_name                       3088localhost1,3088localhost2
         check_command                   3088test2
-        use                             generic-service
+        use                             test-generic-service
 }
 
 
