--- a/tests/etc/3441.cfg
+++ b/tests/etc/3441.cfg
@@ -91,7 +91,7 @@ define service {
 
 define host{
         name                            3441linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
