--- a/tests/etc/3961.cfg
+++ b/tests/etc/3961.cfg
@@ -16,13 +16,13 @@ define hostgroup {
 }
 
 define host {
-        use                             generic-host
+        use                             test-generic-host
 	host_name 			3961foo
 	hostgroups 			3961grpA,3961grpB
 }
 
 define service {
-        use                             generic-service
+        use                             test-generic-service
 	hostgroup_name 			3961grpA,!3961grpB
 }
 
