--- a/tests/etc/4390.cfg
+++ b/tests/etc/4390.cfg
@@ -9,7 +9,7 @@
 
 define host{
 	name				4390linux-server
-	use				generic-host
+	use				test-generic-host
 	check_period			testconfig-24x7
 	check_interval			5
 	retry_interval			1
@@ -37,7 +37,7 @@ define host{
 
 
 define command {
-	command_name 			check_dummy_custom
+	command_name 			4390check_dummy_custom
 	command_line 			/usr/lib/nagios/plugins/check_dummy -H "$HOSTNAME$" -n "$ARG1$" -D "$ARG2$" -l "$ARG3$"
 }
 
@@ -45,7 +45,7 @@ define service {
 	name                           	4390default-servicecheck
 	register                       	0
 	service_description             4390 ServiceCheck Template: default
-	check_command                   check_dummy_custom!$SERVICEDESC$!$SERVICEDISPLAYNAME$!$LASTSERVICECHECK$
+	check_command                   4390check_dummy_custom!$SERVICEDESC$!$SERVICEDISPLAYNAME$!$LASTSERVICECHECK$
 	max_check_attempts              3
 	check_interval                  7
 	retry_interval                  3
