--- a/tests/etc/674.cfg
+++ b/tests/etc/674.cfg
@@ -32,7 +32,7 @@ define command {
 
 define host{
         name                            674linux-server-v6
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
