--- a/tests/etc/check_startup_delay.cfg
+++ b/tests/etc/check_startup_delay.cfg
@@ -18,7 +18,7 @@ define command {
 
 define host{
         name                            startuplinux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
