--- a/tests/etc/templates.cfg
+++ b/tests/etc/templates.cfg
@@ -10,7 +10,7 @@ define service{
   flap_detection_enabled         1
   is_volatile                    0
   max_check_attempts             3
-  name                           generic-service
+  name                           test-generic-service
   normal_check_interval          5
   notification_interval          0
   notification_options           w,u,c,r
@@ -36,7 +36,7 @@ define host{
   failure_prediction_enabled     1
   flap_detection_enabled         1
   max_check_attempts             5
-  name                           generic-host
+  name                           test-generic-host
   normal_check_interval          120
   notification_interval          0
   notification_options           d,u,r
