--- a/tests/etc/1066.cfg
+++ b/tests/etc/1066.cfg
@@ -9,7 +9,7 @@
 
 define host{
 	name				1066linux-server
-	use				generic-host
+	use				test-generic-host
 	check_period			testconfig-24x7
 	check_interval			5
 	retry_interval			1
@@ -68,7 +68,7 @@ define command {
 }
 
 define command {
-	command_name 			check_dummy_custom
+	command_name 			1066check_dummy_custom
 	command_line 			/usr/lib/nagios/plugins/check_dummy -H "$HOSTNAME$" -n "$ARG1$" -D "$ARG2$" -l "$ARG3$"
 }
 
@@ -77,7 +77,7 @@ define service {
 	name                           	1066default-servicecheck
 	register                       	0
 	service_description             ServiceCheck Template: default
-	check_command                   check_dummy_custom!$SERVICEDESC$!$SERVICEDISPLAYNAME$!$LASTSERVICECHECK$
+	check_command                   1066check_dummy_custom!$SERVICEDESC$!$SERVICEDISPLAYNAME$!$LASTSERVICECHECK$
 	max_check_attempts              3
 	check_interval                  7
 	retry_interval                  3
