--- a/tests/etc/1300.cfg
+++ b/tests/etc/1300.cfg
@@ -19,7 +19,7 @@ define command {
 
 define host{
         name                            1300linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
