--- a/tests/etc/2546.cfg
+++ b/tests/etc/2546.cfg
@@ -11,7 +11,7 @@
 
 define host{
 	name				2546fork-server
-	use				generic-host
+	use				test-generic-host
 	check_period			testconfig-24x7
 	check_interval			5
 	retry_interval			1
