--- a/tests/etc/2688.cfg
+++ b/tests/etc/2688.cfg
@@ -8,7 +8,7 @@
 
 define host{
         name                            2688linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
