--- a/tests/etc/2878.cfg
+++ b/tests/etc/2878.cfg
@@ -13,7 +13,7 @@ define command {
 
 define host{
         name                            2878linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    24x7
         check_interval                  5
         retry_interval                  1
