--- a/tests/etc/3324.cfg
+++ b/tests/etc/3324.cfg
@@ -15,7 +15,7 @@ define command {
 
 define host{
         name                            3324linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
