--- a/tests/etc/3397.cfg
+++ b/tests/etc/3397.cfg
@@ -13,7 +13,7 @@ define command {
 
 define host{
         name                            3397linux-server
-        use                             generic-host
+        use                             test-generic-host
         check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
