--- a/tests/etc/3715.cfg
+++ b/tests/etc/3715.cfg
@@ -16,7 +16,7 @@ define command {
 # host template
 define host{
 	name				3715linux-server
-	use				generic-host
+	use				test-generic-host
 	check_period			24x7
 	check_interval			5
 	retry_interval			1
