Issue #2613 -- Enhance Solaris Packaging
   This commit represents changes made to the Solaris packaging
routine to ensure proper install/removal of packages and files
from /etc/icinga (configuration), /var/icinga (state and logs),
and /usr/local/icinga (executables, HTML, and libraries).

   The change to Makefile.in is to ensure that the installation
script can be found as the Solaris package is generated; a Solaris
"preinstall" file is now used to make sure that the "icinga" user
and group is present, and the postinstall now makes sure that
permissions, UIDs and GIDs are icinga:icinga for configuration
and state data.

refs #2613

--- a/Makefile.in
+++ b/Makefile.in
@@ -609,13 +609,13 @@ Prototype:
 	cd sample-config; \
 	for file in *.cfg; \
 	do \
-	    $(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/$$file.$(VERSION); \
+	    ../$(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/$$file.$(VERSION); \
 	done
 	chmod 640 $(PACKDIR)/$(CFGDIR)/resource.cfg.$(VERSION)
 	cd sample-config/template-object; \
 	for file in *.cfg; \
 	do \
-	    $(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/objects/$$file.$(VERSION); \
+	    ../../$(INSTALL) -m 644 $$file $(PACKDIR)/$(CFGDIR)/objects/$$file.$(VERSION); \
 	done
 	mkdir -p $(PACKDIR)/lib/svc/method/
 	$(INSTALL) -o root -g bin -m 555 daemon-init $(PACKDIR)/lib/svc/method/icinga
@@ -630,7 +630,7 @@ Prototype:
 	do \
 	    if [ -f $$file ] ; then echo i $$file >> Prototype; fi ; \
 	done
-	pkgproto $(PACKDIR)=/ | sed -e "s|$(LOGNAME) $(GROUP)$$|root root|" | egrep -v "(s|d) none (/ |/var|/usr|/etc|/lib)" >> solaris/Prototype
+	pkgproto $(PACKDIR)=/ | egrep -v "(s|d) none (/|/var|/usr|/etc|/lib) " >> solaris/Prototype
 
 pkg/icinga/pkgmap: Prototype
 	mkdir $(PACKDIR)/$(SOL_PKG_NAME)
