--- a/cgi/Makefile.in
+++ b/cgi/Makefile.in
@@ -37,7 +37,7 @@ ENABLE_DEBUG=@ENABLE_DEBUG@
 
 # Compiler flags for use with Valgrind - set when debug is enabled
 ifeq ('$(ENABLE_DEBUG)', 'yes')
-        CFLAGS=-O0 -g -DHAVE_CONFIG_H -DNSCGI
+        CFLAGS=-O0 -g -Wall -DHAVE_CONFIG_H -DNSCGI
 endif
 
 # for profiling
