--- a/module/idoutils/src/Makefile.in
+++ b/module/idoutils/src/Makefile.in
@@ -29,7 +29,7 @@ ENABLE_DEBUG=@ENABLE_DEBUG@
 
 # Compiler flags for use with Valgrind - set when debug is enabled
 ifeq ('$(ENABLE_DEBUG)', 'yes')
-        CFLAGS=-O0 -g -DHAVE_CONFIG_H
+        CFLAGS=-O0 -g -Wall -DHAVE_CONFIG_H
 endif
 
 # We don't like ANSI because ANSI doesn't like us! phhht!
