--- a/t-tap/Makefile.in
+++ b/t-tap/Makefile.in
@@ -93,7 +93,7 @@ ENABLE_DEBUG=@ENABLE_DEBUG@
 
 # Compiler flags for use with Valgrind - set when debug is enabled
 ifeq ('$(ENABLE_DEBUG)', 'yes')
-        CFLAGS=-O0 -g -DNSCORE -I../include -I../tools/libtap
+        CFLAGS=-O0 -g -Wall -DNSCORE -I../include -I../tools/libtap
 endif
 
 
