idoutils: remove timedevents & timedeventqueue support and tables
noone ever used that being a performance killer. and those never having
seen it enabled ask themselves whatever that may be. so we're safe to
just drop it while deprecating it once and for all.

db scripts will kill all existing database items too.

(and we're safe for icinga2 ido based on 1.10 schema as well)

refs #4482

--- a/module/idoutils/config/idomod.cfg-sample.in
+++ b/module/idoutils/config/idomod.cfg-sample.in
@@ -147,7 +147,7 @@ reconnect_warning_interval=15
 # Basically you have to calculate from the following values
 #
 #define IDOMOD_PROCESS_PROCESS_DATA                   1
-#define IDOMOD_PROCESS_TIMED_EVENT_DATA               2
+#define IDOMOD_PROCESS_TIMED_EVENT_DATA               2 /* removed */
 #define IDOMOD_PROCESS_LOG_DATA                       4
 #define IDOMOD_PROCESS_SYSTEM_COMMAND_DATA            8
 #define IDOMOD_PROCESS_EVENT_HANDLER_DATA             16
@@ -178,9 +178,8 @@ reconnect_warning_interval=15
 # ATTENTION: if process data is not dumped via idomod, ido2db won't
 #            clean tables and set objects inactive!!!
 #
-# You may use the Online Calculator by Gerhard Lausser:
-# http://labs.consol.de/nagios/ndo-data-processing-options/
-# (please note that there is a checkbox for everything!)
+# NOTE: TIMED_EVENT_DATA was removed in IDOUtils 1.10 - this setting
+# 	has no effect anymore.
 #
 # The default setting will remove everything not used by default.
 #	TIMED_EVENT_DATA 	(-2)
