tests: make them work again

--- a/tests/etc/3715.cfg
+++ b/tests/etc/3715.cfg
@@ -17,7 +17,7 @@ define command {
 define host{
 	name				3715linux-server
 	use				test-generic-host
-	check_period			24x7
+	check_period		 	testconfig-24x7
 	check_interval			5
 	retry_interval			1
 	max_check_attempts		10
@@ -81,8 +81,8 @@ define hostgroup {
 
 define contact{
         name                            3715testconfig-generic-contact         ; The name of this contact template
-        service_notification_period     24x7                    ; service notifications can be sent anytime
-        host_notification_period        24x7                    ; host notifications can be sent anytime
+        service_notification_period     testconfig-24x7                    ; service notifications can be sent anytime
+        host_notification_period        testconfig-24x7                    ; host notifications can be sent anytime
         service_notification_options    w,u,c,r,f,s             ; send notifications for all service states, flapping events, and scheduled downtime events
         host_notification_options       d,u,r,f,s               ; send notifications for all host states, flapping events, and scheduled downtime events
         service_notification_commands   true                    ; send service notifications via email
@@ -129,7 +129,7 @@ define service {
 	check_interval                  7
 	retry_interval                  3
 	active_checks_enabled           1
-	check_period                    24x7
+	check_period                    testconfig-24x7
 	obsess_over_service             0
 	check_freshness                 1
 	event_handler_enabled           0
