--- a/tests/etc/2878.cfg
+++ b/tests/etc/2878.cfg
@@ -14,12 +14,12 @@ define command {
 define host{
         name                            2878linux-server
         use                             test-generic-host
-        check_period                    24x7
+        check_period                    testconfig-24x7
         check_interval                  5
         retry_interval                  1
         max_check_attempts              10
         check_command                   testconfig-check-host-alive
-        notification_period             workhours
+        notification_period             testconfig-workhours
         notification_interval           120
         notification_options            d,u,r
         contact_groups                 	testconfig-group-admin
@@ -48,7 +48,7 @@ define  service {
         retry_check_interval            1
         active_checks_enabled           1
         passive_checks_enabled          1
-        check_period                    24x7
+        check_period                    testconfig-24x7
         parallelize_check               1
         obsess_over_service             1
         check_freshness                 0
@@ -59,7 +59,7 @@ define  service {
         retain_nonstatus_information    1
         contact_groups                  abc
         notification_interval           120
-        notification_period             24x7
+        notification_period             testconfig-24x7
         notification_options            w,u,c,r,f
         notifications_enabled           1
         register                        0
