fix tests in t-tap

--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -124,9 +124,9 @@ define host {
         contact_groups                  testconfig-group-admin
         notification_period             testconfig-workhours
         initial_state                   o
-        check_interval                  5.000000
-        retry_interval                  1.000000
-        max_check_attempts              10
+        check_interval                  5.000000 # foo_check
+        retry_interval                  1.000000 # foo_retry
+        max_check_attempts              10 # How many times to check before sending first notification
         active_checks_enabled           1
         passive_checks_enabled          1
         obsess_over_host                1
@@ -139,7 +139,7 @@ define host {
         check_freshness                 0
         notification_options            d,u,r
         notifications_enabled           1
-        notification_interval           120.000000
+        notification_interval           120.000000 # Number of "time-units" to wait before re-notifying a contact that this host is still in a non-OK state.
         first_notification_delay        0.000000
         stalking_options                n
         process_perf_data               1
