--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -88,7 +88,7 @@ define contactgroup{
 
 define command{
 	command_name			2743test
-	command_line			/bin/echo "2743"
+	command_line			/bin/echo "2743 ADMINPAGER: $ADMINPAGER$ ADMINEMAIL: $ADMINEMAIL$"
 }
 
 
