tests: use multiple USER macros

--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -88,7 +88,7 @@ define contactgroup{
 
 define command{
 	command_name			2743test
-	command_line			/bin/echo "2743 ADMINPAGER: $ADMINPAGER$ ADMINEMAIL: $ADMINEMAIL$"
+	command_line			/bin/echo "2743 ADMINPAGER: $ADMINPAGER$ ADMINEMAIL: $ADMINEMAIL$ USER1: $USER1$ USER15: $USER15$"
 }
 
 
