tests: add some more tests for icinga2 config conversion.

--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -12,8 +12,8 @@ define contact{
         host_notification_period        testconfig-24x7
         service_notification_options    w,u,c,r,f,s
         host_notification_options       d,u,r,f,s
-        service_notification_commands   true
-        host_notification_commands      true
+        service_notification_commands   2743test_notify
+        host_notification_commands      2743test_notify
         register                        0
 }
 
@@ -91,6 +91,11 @@ define command{
 	command_line			/bin/echo "2743 ADMINPAGER: $ADMINPAGER$ ADMINEMAIL: $ADMINEMAIL$ USER1: $USER1$ USER15: $USER15$"
 }
 
+define command{
+	command_name			2743test_notify
+	command_line			/bin/echo "2743 notification ADMINPAGER: $ADMINPAGER$ ADMINEMAIL: $ADMINEMAIL$ USER1: $USER1$ USER15: $USER15$"
+}
+
 
 define hostgroup {
         hostgroup_name      		2743hg_A
@@ -111,7 +116,7 @@ define hostgroup {
 # eventhandler
 define command {
         command_name                2743_eventhandler01
-        command_line                /bin/echo "2743 eventhandler called"
+        command_line                /bin/echo "2743 eventhandler called. USER1: $USER1$ ADMINEMAIL: $ADMINEMAIL$ ADMINPAGER: $ADMINPAGER$"
 }
 
 # host templates
