tests: add special icinga2 command argument macros

--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -92,6 +92,12 @@ define command{
 }
 
 define command{
+	command_name			2743test_with_args
+	command_line			/bin/echo "2743 $ARG1$ $ARG2$"
+}
+
+
+define command{
 	command_name			2743test_notify
 	command_line			/bin/echo "2743 notification ADMINPAGER: $ADMINPAGER$ ADMINEMAIL: $ADMINEMAIL$ USER1: $USER1$ USER15: $USER15$"
 }
@@ -189,6 +195,7 @@ define host {
         failure_prediction_enabled      1
         retain_status_information       1
         retain_nonstatus_information    1
+	_MYSQL_PASSWORD			foobar987763453!
 }
 
 define host {
@@ -788,6 +795,7 @@ define host {
 define service {
         service_description             2743service_custom_attr
         host_name                       2743localhost1
+	check_command			2743test_with_args!$_SERVICEPASSWORD$!bumstinormal
         use                             2743servicetemplatecontacts
         notes                           bumsti
         icon_image                      ../../images/logos/Stats2.png
