idoutils: allow to disable customvar status updates with dump_customvar_status=0|1 in idomod.cfg
this commit also contains a fix for not making a difference between
customvariable config and status data buffers.

the new default is disabling customvar status updates (if config option
is not set), as in most scenarios these updates/table remains useless
afterall. the customvar status updates are forcibly triggered on *every*
host/service (check) update and may decrease rdbms performance in large
scale systems having lots of custom variables applied (i.e. for
filters/restrictions in icinga web).

refs #4479

--- a/module/idoutils/config/idomod.cfg-sample.in
+++ b/module/idoutils/config/idomod.cfg-sample.in
@@ -212,6 +212,21 @@ config_output_options=2
 
 
 
+# DUMP CUSTOMVAR STATUS
+# Custom variables are dumped as required configuration on core startup,
+# but also during runtime (there may be modifications via external commands).
+# Since these updates happen on each host/service/contact status update without
+# any possibility to filter via data_processing_options, this is made a seperate
+# config option. In most scenarios, those updates are not required, therefore
+# the default option is disabled.
+#
+# Values: 0 = disabled (default)
+# 	  1 = enabled
+
+dump_customvar_status=0
+
+
+
 # DEBUG LEVEL
 # This option determines how much (if any) debugging information will
 # be written to the debug file.  OR values together to log multiple
