tests: Icinga2 conversion: add host w/o service, remove service for all hosts.

--- a/tests/etc/2743.cfg
+++ b/tests/etc/2743.cfg
@@ -131,7 +131,7 @@ define host {
         name                       	2743hosttemplate01
         address                         127.0.0.1
         check_period                    testconfig-24x7
-        check_command                   2743test
+        check_command                   2743test_with_args!bumsti01!bumsti02
         contact_groups                  testconfig-group-admin
         notification_period             testconfig-workhours
         initial_state                   o
@@ -269,6 +269,15 @@ define host {
 define command{
         command_name                    2743test2
         command_line                    /bin/echo "2743 service"
+}
+
+##############################################
+# host without service & command in tmpl
+##############################################
+
+define host {
+	host_name			2743host_without_services
+	use				2743hosttemplate01
 }
 
 ##############################################
@@ -641,13 +650,13 @@ define serviceescalation {
 ##############################################
 # service with wildcard '*' on host_name
 ##############################################
-define service {
-        service_description             2743serviceforallhosts
-        host_name                  	*
-        check_command                   2743test2
-        use                             test-generic-service
-        servicegroups                   2743sg_allservices
-}
+#define service {
+#        service_description             2743serviceforallhosts
+#        host_name                  	*,!2743host_without_services
+#        check_command                   2743test2
+#        use                             test-generic-service
+#        servicegroups                   2743sg_allservices
+#}
 
 define servicegroup {
         servicegroup_name              2743sg_allservices
