--- a/sample-config/updates/cgi.cfg_added_1.9_to_1.10.cfg
+++ b/sample-config/updates/cgi.cfg_added_1.9_to_1.10.cfg
@@ -27,3 +27,22 @@ exclude_customvar_name=PASSWORD,COMMUNITY
 # Use * to exclude all custom variable values.
 
 exclude_customvar_value=secret
+
+
+
+# SHOW PARTIAL SERVICEROUPS
+# By default (meaning the directive is not present or disabled), a user
+# only sees a servicegroup and the hosts and services within it if they are an
+# authorised contact for all of the hosts and services of the group.
+# The behaviour can be changed using the directive show_partial_servicegroups=1.
+# When enabled, the serviceroups overview will show a partial listing of hosts
+# and services that the user is an authorised contact for within each servicegroup.
+# It will also add the string "(Partial Servicegroups Enabled)" to the top of
+# the Servicegroup Overview to help prevent any confusion over whether the option
+# is in use or not. However for privacy reasons, servicegroups that are only showing
+# a partial listing are not specifically indicated.
+#
+# Values: 0 - disabled, user only sees full servicegroups (default)
+#         1 - enabled, user sees partial servicegroups
+
+show_partial_servicegroups=0
